# tabbify-service-mesh

./: .gitignore  Cargo.toml  Dockerfile  README.md  bootstrap.sh  justfile
.github/workflows/: release.yml
crates/mesh-coordinator/: Cargo.toml
crates/mesh-coordinator/src/: lib.rs  main.rs  openapi.rs  publisher.rs
crates/mesh-coordinator/src/auth/: mod.rs  validate.rs
crates/mesh-coordinator/src/http/: admin_auth.rs  api.rs  command_api.rs  direct_api.rs  mod.rs  mtls.rs  policy_api.rs  proactive_api.rs  relay.rs  sse.rs
crates/mesh-coordinator/src/http/api/: dto.rs  handlers.rs  mod.rs  stream.rs  tests.rs
crates/mesh-coordinator/src/nat/: direct_flags.rs  holepunch.rs  mod.rs  reflexive.rs  stun_server.rs
crates/mesh-coordinator/src/policy/: mod.rs  model.rs  model_tests.rs  store.rs
crates/mesh-coordinator/src/relay/: frame.rs  mod.rs  registry.rs
crates/mesh-coordinator/src/roster/: allocator.rs  apply.rs  coordinator.rs  events.rs  filter.rs  identity.rs  mod.rs  store.rs  timeout.rs
crates/mesh-coordinator/src/roster/coordinator/: command_queue.rs  heartbeat.rs  jwt_tests.rs  mod.rs  registration.rs  tests.rs
crates/mesh-coordinator/tests/: command_api.rs  http_smoke.rs  jwt_register.rs  openapi_served.rs  policy_acl.rs  relay_integration.rs
crates/mesh-fabric/: Cargo.toml
crates/mesh-fabric/src/: in_process.rs  lib.rs  loopback.rs  trait_def.rs  ula.rs  wireguard.rs
crates/mesh-fabric/src/tun/: linux.rs  macos.rs  mod.rs  unsupported.rs
crates/mesh-fabric/src/wireguard/: ipv6.rs  keys.rs  loops.rs  mod.rs  tests.rs  transport.rs
crates/mesh-fabric/tests/: in_process.rs  loopback.rs  wireguard_tun.rs  wireguard_udp.rs
crates/mesh-joiner/: Cargo.toml
crates/mesh-joiner/src/: config.rs  error.rs  joiner.rs  lib.rs  net_reach.rs  peer.rs
crates/mesh-joiner/src/coordinator/: client.rs  command.rs  command_exec.rs  command_gate.rs  heartbeat.rs  mod.rs  peer_sync.rs
crates/mesh-joiner/src/coordinator/client/: decode.rs  mod.rs  tests.rs  tls.rs
crates/mesh-joiner/src/nat/: holepunch.rs  mod.rs  stun.rs
crates/mesh-joiner/src/platform/: firewall.rs  mod.rs  route.rs
crates/mesh-joiner/src/relay/: client.rs  frame.rs  mod.rs
crates/mesh-joiner/src/wg/: keypair.rs  loops.rs  mod.rs  persistent_identity.rs  persistent_keypair.rs  session.rs
crates/mesh-joiner/src/wg/session/: mod.rs  peer_session.rs  route_sink.rs  table.rs  tests.rs
crates/mesh-log/: Cargo.toml
crates/mesh-log/src/: lib.rs
docs/superpowers/specs/: 2026-05-25-nat-traversal-design.md  2026-05-25-per-app-ula-routing-design.md
tools/tabbify-mesh/: Cargo.toml
tools/tabbify-mesh-ca/: Cargo.toml
tools/tabbify-mesh-ca/src/: main.rs
tools/tabbify-mesh/src/: cli.rs  host_sink.rs  joiner_api.rs  lib.rs  main.rs  status_file.rs  time_format.rs
tools/tabbify-mesh/src/commands/: join.rs  leave.rs  mod.rs  peers.rs  status.rs
