[workspace]
resolver = "3"
members  = [
    "crates/mesh-fabric",
    "crates/mesh-coordinator",
    "crates/mesh-joiner",
    "crates/mesh-log",
    "tools/tabbify-mesh",
    "tools/tabbify-mesh-ca",
]
# Vendored contract crates are standalone path deps (same pattern as the node's
# vendor/), not workspace members — keep them out of workspace resolution.
exclude  = ["vendor"]

[workspace.package]
edition      = "2024"
rust-version = "1.85"
license      = "MIT"
authors      = ["Leo <leontij@pm.me>"]
repository   = "https://github.com/leontij/tabbify-mesh"

[workspace.dependencies]
# Async runtime
tokio        = { version = "1.52", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures      = "0.3"
async-trait  = "0.1"

# HTTP / Web
axum         = { version = "0.7", features = ["macros", "ws"] }
# `default-features = false` drops reqwest's default `default-tls`, which would
# otherwise pull native-tls -> openssl-sys and break static musl release builds.
# TLS goes through rustls (ring) only, matching the `rustls` pin below.
reqwest      = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
# `ring` is enabled explicitly so the coordinator's mTLS path
# (`rustls::crypto::ring::default_provider`) builds standalone — without
# it, the provider module is only present when some other crate in the
# graph happens to enable the feature.
rustls       = { version = "0.23", features = ["ring"] }

# Serialization / Codec
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Hashing / IDs / Time
uuid        = { version = "1.23", features = ["v7", "serde"] }
time        = { version = "0.3", features = ["serde", "macros"] }
chrono      = { version = "0.4", features = ["serde", "clock"] }

# Concurrency
dashmap     = "6"
parking_lot = "0.12"

# Raw socket options — SO_REUSEADDR / SO_REUSEPORT on the WG UDP bind so a
# fast restart re-grabs the stable :51820 port instead of being demoted to an
# ephemeral one (which loses reflexive discovery). Pure-rust, musl-clean.
socket2     = { version = "0.5", features = ["all"] }

# Networking — userspace WireGuard (boringtun) for the production mesh
# fabric. boringtun pins x25519-dalek internally; we re-declare it here
# only so the mesh-fabric crate can construct keypairs from its public
# API. rand_core is needed for the keypair-generation helper.
boringtun     = "0.7"
x25519-dalek  = { version = "2.0.1", features = ["static_secrets"] }
rand_core     = { version = "0.6", features = ["std"] }

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap = { version = "4.6", features = ["derive", "env"] }

# Encoding
base64 = "0.22"

# Ed25519 end-to-end command signing (Track C remote-restart). `rand_core`
# is already pinned above for keypair gen; we only need verify on the joiner
# and (test-only) sign. musl-clean: dalek is pure-rust, no openssl. ed25519-dalek
# 2 pins the SAME x25519-dalek-2 / curve25519-dalek line boringtun already uses,
# so there is no second dalek version in the lock.
ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2          = "0.10"
hex           = "0.4"

# OpenAPI 3 + Swagger UI. Pinned to versions compatible with axum 0.7
# (utoipa-swagger-ui 9.x requires axum 0.8). `axum_extras` enables
# IntoResponses for axum, `uuid` adds a schema for `uuid::Uuid`.
utoipa             = { version = "5", features = ["axum_extras", "uuid"] }
utoipa-swagger-ui  = { version = "8", features = ["axum"] }

# Error / misc
anyhow    = "1"
thiserror = "2"
bytes     = "1"

# Testing
tokio-test  = "0.4"
wiremock    = "0.6"
tempfile    = "3"

[workspace.lints.rust]
unsafe_code              = "deny"
unused_extern_crates     = "warn"
unused_imports           = "warn"
trivial_casts            = "warn"
trivial_numeric_casts    = "warn"

[workspace.lints.clippy]
all                = { level = "warn", priority = -1 }
pedantic           = { level = "warn", priority = -1 }
nursery            = { level = "warn", priority = -1 }
unwrap_used        = "warn"
expect_used        = "warn"
panic              = "warn"
todo               = "warn"
dbg_macro          = "warn"
print_stdout       = "allow"   # CLI / binaries print to stdout legitimately
print_stderr       = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
