[package]
name        = "tabbify-mesh-joiner"
version     = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[lib]
name = "tabbify_mesh_joiner"
path = "src/lib.rs"

[dependencies]
# WireGuard userspace + key generation
boringtun    = { workspace = true }
x25519-dalek = { workspace = true }
rand_core    = { workspace = true }

# Async + HTTP
tokio        = { workspace = true }
futures      = { workspace = true }
reqwest      = { workspace = true }

# SSE client used by `peer_sync` to consume the coordinator's
# `/v1/mesh/peers/stream` endpoint.
eventsource-stream = "0.2"

# Relay client transport: a persistent WebSocket to the coordinator's
# `/v1/mesh/relay` endpoint (Stage 3 connectivity floor / DERP-style). `connect`
# + `handshake` are the base client features; `rustls-tls-webpki-roots` adds TLS
# so the relay can connect over `wss://` (TLS on :443) — REQUIRED to traverse
# restrictive corporate networks/proxies that mangle or reset plaintext `ws://`
# on non-standard ports (exactly how Tailscale's DERP rides HTTPS/443). With the
# feature on, `connect_async` handles `wss://` and validates the server cert
# against the bundled Mozilla webpki roots (covers Let's Encrypt). Pure-rustls →
# musl-clean (no openssl). `futures-util` splits the WS into sink/stream.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
futures-util      = "0.3"

# Codec
serde       = { workspace = true }
serde_json  = { workspace = true }
base64      = { workspace = true }

# Ed25519 end-to-end command verify (Track C remote-restart) + nonce hashing.
ed25519-dalek = { workspace = true }
sha2          = { workspace = true }
hex           = { workspace = true }

# IDs / Logging
uuid        = { workspace = true }
dashmap     = { workspace = true }
parking_lot = { workspace = true }

# Raw socket options for the WG UDP bind (SO_REUSEADDR/SO_REUSEPORT) so a fast
# restart re-binds the stable :51820 port without an ephemeral demotion.
socket2     = { workspace = true }

tracing            = { workspace = true }
# Unified logging-init, re-exported from this crate's root so host apps
# that embed the joiner (supervisor / node) call the SAME `init_logging`
# the coordinator and the CLI use — one JSON shape across the fleet.
tabbify-mesh-log   = { path = "../mesh-log" }

anyhow    = { workspace = true }
thiserror = { workspace = true }

# Reuse our existing TUN abstraction + WireGuard helpers. The
# `wireguard` feature pulls in the cross-platform device wrapper
# along with the boringtun integration we depend on for keypair plumbing.
tabbify-mesh-fabric = { path = "../mesh-fabric", features = ["wireguard"] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile   = { workspace = true }
wiremock   = { workspace = true }
# Implement a recording `TunDevice` (an `#[async_trait]` trait) in the
# relay client task's unit tests.
async-trait = { workspace = true }
# Generate throwaway self-signed certs in mTLS unit tests so we don't
# need to ship PEM fixtures with the crate.
rcgen      = "0.13"
