[package]
name        = "tabbify-mesh-log"
version     = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[lib]
name = "tabbify_mesh_log"
path = "src/lib.rs"

[dependencies]
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
