[package]
name        = "tabbify-mesh"
version     = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lints]
workspace = true

[[bin]]
name = "tabbify-mesh"
path = "src/main.rs"

[lib]
name = "tabbify_mesh"
path = "src/lib.rs"

[dependencies]
tabbify-mesh-joiner = { path = "../../crates/mesh-joiner" }

clap     = { workspace = true }
tokio    = { workspace = true }
tracing            = { workspace = true }
# Logging init comes from the unified `tabbify-mesh-log` crate, re-exported
# through `tabbify-mesh-joiner` (this tool already depends on it), so this
# CLI no longer needs a direct `tracing-subscriber` dependency.
anyhow   = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
reqwest    = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
